--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,7 @@
 body {
   margin: 0em;
   font-family: 'Comfortaa', cursive;
+  text-align: center;
 }
 
 h1 {
@@ -195,4 +196,19 @@ h1 {
   position: absolute;
   top: 70%;
   left: 68%;
+}
+
+.copyright{
+  width: 100%;
+  height: 4.5rem;
+  background-color: #08d9d6;
+  margin: auto;
+  padding-top: 0.4rem;
+  padding-left: auto;
+  padding-right: auto;
+}
+
+.copycontent{
+
+
 }
